[project]
name = "micropython-stm32-pybv11-stubs"
description = "MicroPython stubs"
version = "1.25.0.post2"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jos Verlinde", email = "josverl@users.noreply.github.com" },
]
classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]
dependencies = [
    "micropython-stdlib-stubs  >=1.24.0",
]

[project.urls]
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
repository = "https://github.com/josverl/micropython-stubs"

[tool.poetry]
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
packages = [
    { include = "__builtins__.pyi" },
    { include = "_onewire.pyi" },
    { include = "binascii.pyi" },
    { include = "cmath.pyi" },
    { include = "deflate.pyi" },
    { include = "dht.pyi" },
    { include = "errno.pyi" },
    { include = "framebuf.pyi" },
    { include = "gc.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "lcd160cr.pyi" },
    { include = "machine.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "network.pyi" },
    { include = "onewire.pyi" },
    { include = "platform.pyi" },
    { include = "pyb.pyi" },
    { include = "random.pyi" },
    { include = "select.pyi" },
    { include = "socket.pyi" },
    { include = "stm.pyi" },
    { include = "time.pyi" },
    { include = "uarray.pyi" },
    { include = "uasyncio.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ubluetooth.pyi" },
    { include = "ucollections.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "umachine.pyi" },
    { include = "umqtt/simple.pyi" },
    { include = "uos.pyi" },
    { include = "uplatform.pyi" },
    { include = "urandom.pyi" },
    { include = "ure.pyi" },
    { include = "uselect.pyi" },
    { include = "usocket.pyi" },
    { include = "ussl.pyi" },
    { include = "ustruct.pyi" },
    { include = "usys.pyi" },
    { include = "utime.pyi" },
    { include = "uzlib.pyi" },
    { include = "vfs.pyi" },
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
