[project]
name = "micropython-rp2-rpi_pico-stubs"
description = "MicroPython stubs"
version = "1.27.0.post2"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jos Verlinde", email = "josverl@users.noreply.github.com" },
]
classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]
dependencies = [
    "micropython-stdlib-stubs  ~=1.27.0",
]

[project.urls]
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
repository = "https://github.com/josverl/micropython-stubs"

[tool.poetry]
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
packages = []

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
